# D4Xgui

./: .buildinfo  .gitignore  01_Data_IO.html  03_Baseline_correction.html  04_Processing.html  05_Standardization_Results.html  06_Dual_Clumped_Space.html  07_Discover_Results.html  08_D47crunch_plots.html  100_Save_and_Reload.html  97_Database_Management.html  CHANGELOG.md  INSTALLATION.md  MANIFEST.in  README.md  Welcome.py  __version__.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  search.html  searchindex.js  test_app_workflow.py  tools_Pysotope_fork.html  tools_authenticator.html  tools_calc_temperature.html  tools_commons.html  tools_database.html  tools_init_params.html  tools_page_config.html  tools_sidebar_logo.html
.streamlit/: config.toml
D4Xgui/: Welcome.py  __init__.py
_modules/: index.html
_sources/: 01_Data_IO.rst.txt  04_Processing.rst.txt  05_Standardization_Results.rst.txt  06_Dual_Clumped_Space.rst.txt  07_Discover_Results.rst.txt  08_D47crunch_plots.rst.txt  100_Save_and_Reload.rst.txt  97_Database_Management.rst.txt  index_viagroups.rst.txt  pages_index.rst.txt  tools_Pysotope_fork.rst.txt  tools_authenticator.rst.txt  tools_calc_temperature.rst.txt  tools_commons.rst.txt  tools_init_params.rst.txt  tools_page_config.rst.txt
docs/: docs_stub.py
pages/: 01_Data-IO.py  01_Data_IO.py  03_Baseline correction.py  03_Baseline_correction.py  04_Processing.py  05_Standardization Results.py  05_Standardization_Results.py  06_Dual Clumped Space.py  06_Dual_Clumped_Space.py  07_Discover Results.py  (+5 more)
(+74 files in other folders)
